Fixed issue arrow boxes not showing up

--- a/app/assets/stylesheets/course.css.scss
+++ b/app/assets/stylesheets/course.css.scss
@@ -414,7 +414,8 @@ body{
 
 .playlist_thumb .slick-next, .playlist_thumb .slick-next:hover, .playlist_thumb .slick-next:focus, .playlist_thumb .slick-prev, .playlist_thumb .slick-prev:focus, .playlist_thumb .slick-prev:hover{
   right: 0px;
-  background: url(/assets/right-black.png) no-repeat;
+  background-image: image-url('right-black.png');
+  background-repeat: no-repeat;
   background-color: #f6f6f6;
   box-shadow: 1px 0px 5px rgba(0,0,0,.5);
   background-size: 8px;
@@ -425,7 +426,8 @@ body{
 }
 .playlist_thumb .slick-prev, .playlist_thumb .slick-prev:focus, .playlist_thumb .slick-prev:hover{
   left: 0px;
-  background: url(/assets/left-black.png) no-repeat;
+  background-image: image-url('left-black.png');
+  background-repeat: no-repeat;
   background-size: 8px;
   background-position: center;
   background-color: #f6f6f6;
